Atualizacao - metodos